# socket_demo

./: CMakeLists.txt  readme.md
TCP_demo/: CMakeLists.txt  e_server.cpp  s_server.cpp  tcp_client.cpp
UDP_demo/: CMakeLists.txt  udp_client.cpp  udp_server.cpp
cmake/: wxh_arm.cmake  wxh_x86.cmake
